# arc_dwarf

./: .gitignore  LICENSE  Langcang_bpm_solution.a2l  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api_reference.md  architecture.md  conf.py  copilot_training_guide.md  copilot_training_guide.pptx  generate_ppt.py  getting_started.md  index.rst
examples/: basic_usage.py  interactive_tool.py  member_address.py  riscv_member_address.py
src/arc_dwarf/: __init__.py  a2l_parser.py  cli.py  dwarf_explorer.py  formatting.py  model.py  textout.py  type_dumper.py
tests/: conftest.py  test_a2l_parser.py  test_cli.py  test_dwarf_explorer.py  test_model.py  test_type_dumper.py
tests/fixtures/: sample.a2l
